--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- public/index.html -->
 <!DOCTYPE html>
 <html lang="en" class="dark">
   <head>
@@ -8,6 +7,14 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="My portfolio website" />
     <title>My - Portfolio</title>
+
+    <!-- Preload LCP image -->
+    <link
+      rel="preload"
+      as="image"
+      href="/images/profile.webp"
+      fetchpriority="high"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
