--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link
       rel="preload"
       as="image"
-      href="/images/profile-logo.webp"
+      href="/images/logo-profile.webp"
       fetchpriority="high"
     />
   </head>
